[gd_scene load_steps=3 format=3 uid="uid://b1h84qm168c3w"]

[ext_resource type="Script" path="res://addons/dialogic_additions/AdvancedVoice/VoiceSegmentPanel.gd" id="1_3mmi3"]
[ext_resource type="AudioStream" uid="uid://cj0fjgspa3mkd" path="res://test-project/529945__legnalegna55__open-n-close-metal-door.mp3" id="2_y2qdg"]

[node name="VoiceSegmentPanel" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = -580.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_3mmi3")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_y2qdg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "index"

[node name="spinIndex" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
max_value = 999.0
value = 999.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Start at"

[node name="spinStartTime" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
max_value = 9999.9
step = 0.1
value = 9999.9
suffix = "sec"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Stop at"

[node name="spinStopTime" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
max_value = 9999.9
step = 0.1
value = 9999.9
suffix = "sec"

[node name="btnTest" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "TEST"

[node name="btnExpand" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
toggle_mode = true
flat = true

[node name="boxNotes" type="ScrollContainer" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 32)
layout_mode = 2

[node name="txtNotes" type="TextEdit" parent="VBoxContainer/boxNotes"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "notes of what this segment contains."

[connection signal="value_changed" from="VBoxContainer/HBoxContainer/spinIndex" to="." method="_on_spin_index_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/spinStartTime" to="." method="_on_spin_start_time_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/spinStopTime" to="." method="_on_spin_stop_time_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/btnTest" to="." method="_on_btn_test_pressed"]
[connection signal="text_changed" from="VBoxContainer/boxNotes/txtNotes" to="." method="_on_txt_notes_text_changed"]
